--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-MONGO_PATH=
-MONGO_USER=
-MONGO_PASSWORD=
+MONGO_PATH=localhost:27017/tracker
+MONGO_USER=admin
+MONGO_PASSWORD=admin
 JWT_SECRET=
